--- a/refs.bib
+++ b/refs.bib
@@ -20,6 +20,17 @@
 	
 }
 
+@article{luo2019multiple,
+	title={A multiple-try Metropolis--Hastings algorithm with tailored proposals},
+	author={Luo, Xin and Tjelmeland, H{\aa}kon},
+	journal={Computational Statistics},
+	volume={34},
+	number={3},
+	pages={1109--1133},
+	year={2019},
+	publisher={Springer}
+}
+
 @techreport{tjelmeland2004using,
 	title={Using all Metropolis--Hastings proposals to estimate mean values},
 	author={Tjelmeland, Hakon},
