--- a/refs.bib
+++ b/refs.bib
@@ -6,19 +6,37 @@
 	number = {1},
 	pages = {11-24},
 	year  = {2021},
-	publisher = {Taylor & Francis},
+	publisher = {Taylor \& Francis},
 	doi = {10.1080/10618600.2020.1754226},
-	
 	URL = { 
-	https://doi.org/10.1080/10618600.2020.1754226
-	
-	},
+	https://doi.org/10.1080/10618600.2020.1754226},
 	eprint = { 
 	https://doi.org/10.1080/10618600.2020.1754226
-	
 	}
-	
 }
+
+@inproceedings{salmon2011parallel,
+	title={Parallel random numbers: as easy as 1, 2, 3},
+	author={Salmon, John K and Moraes, Mark A and Dror, Ron O and Shaw, David E},
+	booktitle={Proceedings of 2011 International Conference for High Performance Computing, Networking, Storage and Analysis},
+	pages={1--12},
+	year={2011}
+}
+
+@article{lao2020tfp,
+	title={tfp. mcmc: Modern Markov chain Monte Carlo tools built for modern hardware},
+	author={Lao, Junpeng and Suter, Christopher and Langmore, Ian and Chimisov, Cyril and Saxena, Ashish and Sountsov, Pavel and Moore, Dave and Saurous, Rif A and Hoffman, Matthew D and Dillon, Joshua V},
+	journal={arXiv preprint arXiv:2002.01184},
+	year={2020}
+}
+
+@article{holbrook2021generating,
+	title={Generating MCMC proposals by randomly rotating the regular simplex},
+	author={Holbrook, Andrew J},
+	journal={arXiv preprint arXiv:2110.06445},
+	year={2021}
+}
+
 
 @article{luo2019multiple,
 	title={A multiple-try Metropolis--Hastings algorithm with tailored proposals},
