--- a/refs.bib
+++ b/refs.bib
@@ -15,6 +15,18 @@
 	}
 }
 
+@article{gelman1992inference,
+	title={Inference from iterative simulation using multiple sequences},
+	author={Gelman, Andrew and Rubin, Donald B},
+	journal={Statistical science},
+	volume={7},
+	number={4},
+	pages={457--472},
+	year={1992},
+	publisher={Institute of Mathematical Statistics}
+}
+
+
 @inproceedings{salmon2011parallel,
 	title={Parallel random numbers: as easy as 1, 2, 3},
 	author={Salmon, John K and Moraes, Mark A and Dror, Ron O and Shaw, David E},
@@ -22,6 +34,18 @@
 	pages={1--12},
 	year={2011}
 }
+
+@article{holbrook2021scalable,
+	title={Scalable Bayesian inference for self-excitatory stochastic processes applied to big American gunfire data},
+	author={Holbrook, Andrew J and Loeffler, Charles E and Flaxman, Seth R and Suchard, Marc A},
+	journal={Statistics and Computing},
+	volume={31},
+	number={1},
+	pages={1--15},
+	year={2021},
+	publisher={Springer}
+}
+
 
 @article{lao2020tfp,
 	title={tfp. mcmc: Modern Markov chain Monte Carlo tools built for modern hardware},
