--- a/refs.bib
+++ b/refs.bib
@@ -46,6 +46,64 @@
 	publisher={Springer}
 }
 
+@inproceedings{grover1996fast,
+	title={A fast quantum mechanical algorithm for database search},
+	author={Grover, Lov K},
+	booktitle={Proceedings of the twenty-eighth annual ACM symposium on Theory of computing},
+	pages={212--219},
+	year={1996}
+}
+
+@article{boyer1998tight,
+	title={Tight bounds on quantum searching},
+	author={Boyer, Michel and Brassard, Gilles and H{\o}yer, Peter and Tapp, Alain},
+	journal={Fortschritte der Physik: Progress of Physics},
+	volume={46},
+	number={4-5},
+	pages={493--505},
+	year={1998},
+	publisher={Wiley Online Library}
+}
+
+@article{jordan2005fast,
+	title={Fast quantum algorithm for numerical gradient estimation},
+	author={Jordan, Stephen P},
+	journal={Physical review letters},
+	volume={95},
+	number={5},
+	pages={050501},
+	year={2005},
+	publisher={APS}
+}
+
+@article{harrow2009quantum,
+	title={Quantum algorithm for linear systems of equations},
+	author={Harrow, Aram W and Hassidim, Avinatan and Lloyd, Seth},
+	journal={Physical review letters},
+	volume={103},
+	number={15},
+	pages={150502},
+	year={2009},
+	publisher={APS}
+}
+
+@article{aaronson2015read,
+	title={Read the fine print},
+	author={Aaronson, Scott},
+	journal={Nature Physics},
+	volume={11},
+	number={4},
+	pages={291--293},
+	year={2015},
+	publisher={Nature Publishing Group}
+}
+
+@misc{nielsen2002quantum,
+	title={Quantum computation and quantum information},
+	author={Nielsen, Michael A and Chuang, Isaac},
+	year={2002},
+	publisher={American Association of Physics Teachers}
+}
 
 @article{lao2020tfp,
 	title={tfp. mcmc: Modern Markov chain Monte Carlo tools built for modern hardware},
