--- a/refs.bib
+++ b/refs.bib
@@ -98,6 +98,18 @@
 	publisher={Nature Publishing Group}
 }
 
+@article{werner2008estimation,
+	title={On estimation of covariance matrices with Kronecker product structure},
+	author={Werner, Karl and Jansson, Magnus and Stoica, Petre},
+	journal={IEEE Transactions on Signal Processing},
+	volume={56},
+	number={2},
+	pages={478--491},
+	year={2008},
+	publisher={IEEE}
+}
+
+
 @misc{nielsen2002quantum,
 	title={Quantum computation and quantum information},
 	author={Nielsen, Michael A and Chuang, Isaac},
