--- a/main.tex
+++ b/main.tex
@@ -265,7 +265,7 @@ A_{L1}\B & \cdots & A_{LM}  \B
 \end{bmatrix} \, .
 \end{align} 
 In statistics, the Kronecker product features in the definition of a matrix normal distribution and is sometimes helpful when specifying the kernel function of a multivariate Gaussian process \citep{werner2008estimation}. Here, the product is equivalent to the parallel action of individual quantum gates on individual qubits.  Simple application of Formula \eqref{eq:kron} shows that
-\begin{align}
+\begin{align}\label{eq:twoqubits}
 \H \otimes \H = \frac{1}{2} \left[\begin{array}{rrrr}
 1 & 1 & 1 & 1 \\
 1 &  -1& 1 & -1 \\
@@ -279,6 +279,18 @@ In statistics, the Kronecker product features in the definition of a matrix norm
 1 \\ 0 \\ 0 \\ 0
 \end{bmatrix} \, .
 \end{align} 
+We may also denote the left product $\H^{\otimes2}$ and the right product $\ket{0}\ket{0}$ or $\ket{00}$. Letting $\ket{10}$, $\ket{01}$ and $\ket{11}$ take on analogous meanings, an immediate result of Equation \eqref{eq:twoqubits} is that
+\begin{align}\label{eq:twodmult}
+\H^{\otimes2} \ket{00} = \frac{1}{2}\Big(\ket{00} + \ket{01} + \ket{10} + \ket{11}\Big) \, .
+\end{align}
+The action of $\H^{\otimes2}$ transforms $\ket{00}$ into a superposition of the states $\ket{00}$, $\ket{10}$, $\ket{01}$ and $\ket{11}$, where the probability of selecting each is a uniform $(1/2)^2=1/4$. Writing so many $0$s and $1$s can be tedious, so an alternative notation becomes preferable. Exchanging $\ket{0}$ for $\ket{00}$, $\ket{1}$ for $\ket{01}$, $\ket{2}$ for $\ket{10}$, and $\ket{3}$ for $\ket{11}$, Equation \eqref{eq:twodmult} becomes the slightly more succinct
+\begin{align}
+\H^{\otimes2} \ket{0} = \frac{1}{2}\Big(\ket{0} + \ket{1} + \ket{2} + \ket{3}\Big) \, .
+\end{align}
+This formula extends generally to operations over $n$ qubits.  Now letting $N=2^n$, we have
+\begin{align}
+\H^{\otimes n} \ket{0} = \frac{1}{\sqrt{N}}\Big(\ket{0} + \ket{1} + \dots + \ket{N-1}\Big) =  \frac{1}{\sqrt{N}} \sum_{x=0}^{N-1} \ket{x} \, .
+\end{align}
 
 =============================
 
@@ -286,7 +298,7 @@ In statistics, the Kronecker product features in the definition of a matrix norm
 
 =============================
 
-\section{Quantum search and quantum minimization}
+\section{Quantum parallelism, search and minimization}
 
 
 \section{Parallel MCMC subroutines}
